--- a/src/main/resources/templates/prestador/admServicios.html
+++ b/src/main/resources/templates/prestador/admServicios.html
@@ -188,7 +188,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Editar Evento</h5>
+                <h5 class="modal-title">Editar Servicio</h5>
                 <button type="button" class="close" onclick="cerrarModal('modalEditarServicio')" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
