algunos fixes de front end , titulos y tamanios de tabla

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -397,6 +397,14 @@ label{
 	margin-right: 3em;
 }
 
+
+.ratio{
+	display: block;
+	max-width:250px;
+	max-height:250px;
+	width: auto;
+	height: auto;
+}
 .nom-masc{
 	font-weight:bold;
 	font-size: 20px;
