--- a/src/main/resources/templates/admin/admEventos.html
+++ b/src/main/resources/templates/admin/admEventos.html
@@ -99,18 +99,17 @@
                             data-search="true"
                             data-pagination="true"
                             data-page-size="10"
-                            style=" width: 1px; white-space: nowrap;"
-
+                            style="table-layout: fixed; word-wrap: break-word"
                     >
                         <thead>
                         <tr>
-                            <th data-field="id" >Id Evento</th>
+                            <th data-field="id" data-width="90" >Id Evento</th>
                             <th data-field="dias" >Día</th>
                             <th data-field="horarios">Horario</th>
                             <th data-field="lugar">Lugar</th>
                             <th data-field="barrio">Barrio</th>
                             <th data-field="consultas">Consultas</th>
-                            <th data-formatter="TableActions">Action</th>
+                            <th data-formatter="TableActions" data-width="80">Action</th>
 
 
                         </tr>
