--- a/src/main/resources/templates/prestador/admServicios.html
+++ b/src/main/resources/templates/prestador/admServicios.html
@@ -119,10 +119,10 @@
                                     <th data-field="tipoServicio" >Tipo Servicio</th>
                                     <th data-field="titulo">Titulo</th>
                                     <th data-field="descripcion">Descripción</th>
-                                    <th data-field="costo">Costo $</th>
+                                    <th data-field="costo" data-width="80">Costo $</th>
                                     <th data-field="urlPago">URL Pago</th>
                                     <th data-field="fechaFin" >Fecha Hasta</th>
-                                    <th data-formatter="TableActions">Action</th>
+                                    <th data-formatter="TableActions" data-width="80">Action</th>
                                 </tr>
                                 </thead>
 
