--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
     <script type="text/javascript" th:src="@{/js/jquery-3.3.1.min.js}"></script>
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
 
 
@@ -31,7 +31,7 @@
 				<!--Mascotas adoptadas-->
 				<div class="col-xs-8 col-sm-3">
 					<div class="card-puntas scroll-box" id="mascotasAdopDiv">
-						<h2 class="card-header " >Mascotas Adoptadas</h2>
+						<h2 class="card-header " >Ya encontramos casita</h2>
 
 					</div>
 				</div>
@@ -41,7 +41,7 @@
 				<div class="col-sm-5">
 
 					<div class="card-masc" id="mascotaDiv">
-                        <h2 class="card-header " >Mascotas En Adopción</h2>
+                        <h2 class="card-header " >Todavía buscamos un hogar</h2>
 
 					</div>
 				</div>
@@ -51,7 +51,7 @@
                     <!--Eventos Proximos-->
 				<div class="col-xs-8 col-sm-4">
 					<div class="card-puntas scroll-box" id="eventosDiv">
-						<h2 class="card-header " >Eventos Próximos</h2>
+						<h2 class="card-header " >Te puede interesar</h2>
 
 					</div>
 				</div>
@@ -65,7 +65,7 @@
 	<div class="container-fluid">
 		<div class="row" style="justify-content: center">
 			<div class="col-sm-4" >
-				<h4>Contacto</h4>
+				<h4>Contactanos</h4>
 				<a href="mailto:adoptameargapp@gmail.com" > <img class="img_contact" th:src="@{/img/contact.png}" alt="contact" /> </a>
 			</div>
 
@@ -148,11 +148,11 @@ function cargarMascotasEnAdopcion() {
             $.each( mascotas, function( index, mascota ) {
 
                 //creo un elemento mascota
-
+				var sexo= mascota.sexo=="MACHO"?'<i class="fa fa-mars"></i> ':'<i class="fa fa-venus"></i> ';
 
                 var mascotaElem= $('<div class="card-adopt"> <div class="col-sm-3"> <img src="'+mascota.foto_url+'" class=" rounded-circle img_list float-left "/>   </div>'
-                    +' <div class="offset-sm-3 col-sm-9">  <h2 class="tit_item">' +mascota.nombre+' - <span class="edad">'+mascota.edad+' años</span></h2>'
-                    +' <p class="descripcion"> '+mascota.descripcion+'<br> Sexo: '+mascota.sexo+'</br> Tamaño: '+mascota.tamanio+'</p>\n'
+                    +' <div class="offset-sm-3 col-sm-9">  <h2 class="tit_item">' +mascota.nombre+' - <span class="edad">'+mascota.edad+' años  </span>' +sexo+ '</h2>'
+                    +'<p class="descripcion "> Tamaño: '+mascota.tamanio.toLowerCase()+'<br> '+mascota.descripcion+'</p>\n'
                     +' </div></div> '
                 );
 
@@ -186,8 +186,8 @@ function cargarMascotasAdoptadas() {
 
 
                 var mascotaElem= $('<div class="card-peque"> '
-									+'<div class="row " style="justify-content: center;">'
-									+'<img src="'+mascota.foto_url+'" class="img-adop"/>   '
+									+'<div class="row " style="justify-content: center; ">'
+									+'<img src="'+mascota.foto_url+'" class="ratio"/>   '
 									+'</div>'
 						+'<div class="row" style="justify-content: center;">'
 									+'<spam class="nom-masc">'+mascota.nombre+'</spam>'
