fixes correcciones profesor roldan

--- a/src/main/resources/templates/admin/admHeader.html
+++ b/src/main/resources/templates/admin/admHeader.html
@@ -48,12 +48,12 @@
             <a th:href="@{/usuarios/nuevoUsuario}" class="list-group-item list-group-item-action">Usuarios</a>
             <a th:href="@{/prestador/nuevoPrestador}" class="list-group-item list-group-item-action">Servicios</a>
             <a th:href="@{/admin/eventos}" class="list-group-item list-group-item-action">Eventos</a>
-            <a th:href="@{/logout}" class="list-group-item list-group-item-action">Logout</a>
+            <a th:href="@{/logout}" class="list-group-item list-group-item-action">Salir</a>
 
 
             <div class="divisor"></div>
 
-            <h3>Estadisticas</h3>
+            <h3>Estadísticas</h3>
             <a th:href="@{/admin/chart}" class="list-group-item list-group-item-action">Mascotas</a>
 
 
