--- a/src/main/resources/templates/admin/admEventos.html
+++ b/src/main/resources/templates/admin/admEventos.html
@@ -109,7 +109,7 @@
                             <th data-field="lugar">Lugar</th>
                             <th data-field="barrio">Barrio</th>
                             <th data-field="consultas">Consultas</th>
-                            <th data-formatter="TableActions" data-width="80">Action</th>
+                            <th data-formatter="TableActions" data-width="80">Acción</th>
 
 
                         </tr>
