--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -44,10 +44,10 @@
 					   <div class="row">
 							<div class="offset-sm-4 col-sm-4">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Email" id="email" th:field="*{email}" />
+									<input type="text" class="form-control" placeholder="Correo electrónico" id="email" th:field="*{email}" />
 								</div>
 								<div class="form-group">
-									<input type="password" class="form-control" placeholder="Password" id="password" th:field="*{password}"/>
+									<input type="password" class="form-control" placeholder="Contraseña" id="password" th:field="*{password}"/>
 								</div>
 								<div>
 									<td th:text="${error}">1</td>
