--- a/src/main/resources/templates/usuarios/admUsuarios.html
+++ b/src/main/resources/templates/usuarios/admUsuarios.html
@@ -42,12 +42,12 @@
                             </div>
 
                             <div class="col-md-4">
-                                <label for="email">* Email:</label>
+                                <label for="email">* Correo electrónico:</label>
                                 <input type="text" class="form-control" id="email" name="email" /> <!--th:field="*{}"-->
                                 </div>
 
                             <div class="col-md-4">
-                                    <label for="password">* Password:</label>
+                                    <label for="password">* Contraseña:</label>
                                     <input type="password" class="form-control" id="password" name="password"/> <!--th:field="*{}"-->
                             </div>
 
@@ -101,9 +101,9 @@
                     <th data-field="id">Id usuario</th>
                     <th data-field="nombre">Nombre</th>
                     <th data-field="apellido">Apellido</th>
-                    <th data-field="email">Email</th>
+                    <th data-field="email">Correo Electrónico</th>
                     <th data-field="rol">Rol</th>
-                    <th data-formatter="TableActions">Action</th>
+                    <th data-formatter="TableActions">Acción</th>
 
 
                 </tr>
@@ -146,7 +146,7 @@
 
                          <div class="row">
                              <div class="col-md-6">
-                                 <label for="nombre">Email:</label>
+                                 <label for="nombre">Correo electrónico:</label>
                                  <input type="text" class="form-control" id="emailUsuarioEditar" name="emailUsuarioEditar" />
                              </div>
 
