Alt tag en imagenes y puse placeholders

--- a/src/main/resources/templates/admin/admEventos.html
+++ b/src/main/resources/templates/admin/admEventos.html
@@ -33,34 +33,34 @@
 
                                 <div class="col-md-4">
                                     <label for="fecha">* Día:</label>
-                                    <input class="form-control" type="text" id="dias" name="dias" onchange="revalidarDias();" />
+                                    <input class="form-control" type="text" id="dias" placeholder="DD-MM-YYYY" name="dias" onchange="revalidarDias();" />
                                     <!--th:field="*{}"-->
                                 </div>
                                 <div class="col-md-4">
                                     <label for="horarios">* Horario:</label>
-                                    <input type="text" class="form-control"  id="horarios" name="horarios" required="true"   /> <!--th:field="*{}"-->
+                                    <input type="text" class="form-control"  id="horarios" placeholder="## - ## hs" name="horarios" required="true"   /> <!--th:field="*{}"-->
 
                                 </div>
 
                                 <div class="col-md-4">
                                     <label for="direccion">* Dirección:</label>
-                                    <input type="text" class="form-control" id="direccion" name="direccion" required="true"  /> <!--th:field="*{}"-->
+                                    <input type="text" class="form-control" id="direccion" placeholder="Texto" name="direccion" required="true"  /> <!--th:field="*{}"-->
                                 </div>
 
                                 <div class="col-md-4">
                                     <label for="Lugar">* Lugar:</label>
-                                    <input type="text" class="form-control" id="lugar" name="lugar" required="true" /> <!--th:field="*{}"-->
+                                    <input type="text" class="form-control" id="lugar" name="lugar" placeholder="Texto" required="true" /> <!--th:field="*{}"-->
                                 </div>
 
                                 <div class="col-md-4">
                                     <label for="barrio">* Barrio:</label>
-                                    <input type="text" class="form-control" id="barrio" name="barrio" required="true" /> <!--th:field="*{}"-->
+                                    <input type="text" class="form-control" id="barrio" placeholder="Texto" name="barrio" required="true" /> <!--th:field="*{}"-->
 
                                 </div>
 
                                 <div class="col-md-12">
                                     <label for="consultas">* Consultas:</label>
-                                    <input type="text" class="form-control" id="consultas" name="consultas" required="true" /> <!--th:field="*{}"-->
+                                    <input type="text" class="form-control" id="consultas" name="consultas" placeholder="Texto" required="true" /> <!--th:field="*{}"-->
 
                                 </div>
                             </div>
@@ -88,7 +88,7 @@
                 <div class="col-md-11">
                         <div class="row">
                             <div class="col-md-5">
-                                <h6>Ingresados</h6>
+                                <h6>Eventos ingresados</h6>
                             </div>
 
                         </div>
