--- a/src/main/resources/templates/prestador/admServicios.html
+++ b/src/main/resources/templates/prestador/admServicios.html
@@ -19,7 +19,7 @@
                     <!-- formulario de Ing de servicio-->
                     <div class="col-md-11">
                         <form id="altaServicioForm"  name="altaServicioForm" >
-                            <h6>Ingresar Nuevo Servicio</h6>
+                            <h6>Ingresar nuevo servicio</h6>
                             <div class="card">
                                 <div class="card-body">
                                     <h6>Datos de Usuario</h6>
@@ -28,26 +28,26 @@
 
                                         <div class="col-md-4">
                                             <label for="email">* Correo electrónico:</label>
-                                            <input type="text" class="form-control" id="email" name="email" onblur="buscoEmail()"/>
+                                            <input type="text" class="form-control" placeholder="Ejemplo@dominio.com" id="email" name="email" onblur="buscoEmail()"/>
                                         </div>
 
                                         <div class="col-md-4">
                                             <label for="nombre">* Nombre:</label>
-                                            <input type="text" class="form-control" id="nombre" name="nombre"/>
+                                            <input type="text" class="form-control" placeholder="Texto" id="nombre" name="nombre"/>
                                         </div>
 
                                         <div class="col-md-4">
                                             <label for="apellido">* Apellido:</label>
-                                            <input type="text" class="form-control" id="apellido" name="apellido"/>
+                                            <input type="text" class="form-control" placeholder="Texto" id="apellido" name="apellido"/>
                                         </div>
                                        <div class="col-md-4">
                                             <label for="direccion">* Dirección:</label>
-                                            <input type="text" class="form-control" id="direccion" name="direccion"/>
+                                            <input type="text" class="form-control" id="direccion" placeholder="Texto" name="direccion"/>
                                         </div>
 
                                         <div class="col-md-4">
                                             <label for="direccion">* Teléfono:</label>
-                                            <input type="text" class="form-control" id="telefono" name="telefono"/>
+                                            <input type="text" class="form-control" id="telefono" placeholder="##########" name="telefono"/>
                                         </div>
                                     </div>
 
@@ -57,32 +57,32 @@
                                     <div class="row">
                                         <div class="col-md-3">
                                             <label for="titulo">* Título:</label>
-                                            <input type="text" class="form-control" id="titulo" name="titulo"/>
+                                            <input type="text" class="form-control" placeholder="Texto" id="titulo" name="titulo"/>
                                         </div>
 
                                         <div class="col-md-2">
                                             <label for="costo">* Costo:</label>
-                                            <input type="text" class="form-control" id="costo" name="costo"/>
+                                            <input type="text" class="form-control" placeholder="$$$$" id="costo" name="costo"/>
                                         </div>
                                         <div class="col-md-2">
                                             <label for="vigencia">* Vigencia (Días):</label>
-                                            <input type="text" class="form-control" id="vigencia" name="vigencia"/>
+                                            <input type="text" class="form-control" placeholder="##" id="vigencia" name="vigencia"/>
                                         </div>
 
                                         <div class="col-md-2">
                                             <label for="tipoServicio">* Tipo Servicio:</label>
-                                            <select class="form-control" id="tipoServicio" name="tipoServicio">
+                                            <select class="form-control" id="tipoServicio" placeholder="Tipo Servicio" name="tipoServicio">
                                                 <option th:value="Guarderia" th:text="Guardería"></option>
                                                 <option th:value="Veterinaria" th:text="Veterinaria"></option>
                                             </select>
                                         </div>
                                         <div class="col-md-4">
                                             <label for="urlPago">* Link de Pago:</label>
-                                            <input type="text" class="form-control" id="urlPago" name="urlPago"/>
+                                            <input type="text" class="form-control" id="urlPago" placeholder="https://www.ejemplo.com"  name="urlPago"/>
                                         </div>
                                         <div class="col-md-6">
                                             <label for="descripcion">* Descripción:</label>
-                                            <textarea  style="resize: none;" class="form-control" rows="3" cols="50" id="descripcion" name="descripcion"></textarea>
+                                            <textarea  style="resize: none;" class="form-control" rows="3" cols="50" id="descripcion" placeholder="Texto" name="descripcion"></textarea>
                                         </div>
                                     </div>
                                     <button type="button"  id="crearPrestador" class="btn btn-secondary float-right">Agregar</button>
@@ -97,7 +97,7 @@
                         <!-- TABLA DE SERVICIOS INGRESADOS-->
                         <div class=" col-md-12">
                             <div class="divisor"></div>
-                            <h6>Activos</h6>
+                            <h6>Servicios Ingresados</h6>
 
                             <table  id="tablaServicios"
                                     data-toggle="table"
