--- a/src/main/resources/templates/usuarios/admUsuarios.html
+++ b/src/main/resources/templates/usuarios/admUsuarios.html
@@ -33,22 +33,22 @@
 
                             <div class="col-md-4">
                                     <label for="nombre">* Nombre:</label>
-                                    <input type="text" class="form-control" id="nombre" name="nombre" /> <!--th:field="*{}"-->
+                                    <input type="text" class="form-control" id="nombre" placeholder="Texto" name="nombre" /> <!--th:field="*{}"-->
                             </div>
                             <div class="col-md-4">
                                 <label for="apellido">* Apellido:</label>
-                                <input type="text" class="form-control" id="apellido" name="apellido" /> <!--th:field="*{}"-->
+                                <input type="text" class="form-control" id="apellido" placeholder="Texto" name="apellido" /> <!--th:field="*{}"-->
 
                             </div>
 
                             <div class="col-md-4">
                                 <label for="email">* Correo electrónico:</label>
-                                <input type="text" class="form-control" id="email" name="email" /> <!--th:field="*{}"-->
+                                <input type="text" class="form-control" id="email" placeholder="Ejemplo@dominio.com" name="email" /> <!--th:field="*{}"-->
                                 </div>
 
                             <div class="col-md-4">
                                     <label for="password">* Contraseña:</label>
-                                    <input type="password" class="form-control" id="password" name="password"/> <!--th:field="*{}"-->
+                                    <input type="password" class="form-control" id="password" placeholder="********" name="password"/> <!--th:field="*{}"-->
                             </div>
 
                             <div class="col-md-4">
@@ -83,7 +83,7 @@
         <form th:action="@{/usuarios/guardarUsuario}" th:object="${usuarioDTO}" method="POST">
           <div class="row">
               <div class="col-md-5">
-               <h6>Ingresados</h6>
+               <h6>Usuarios ingresados</h6>
                </div>
 
 
