--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -47,10 +47,11 @@
 									<input type="text" class="form-control" placeholder="Ejemplo@dominio.com" id="email" th:field="*{email}" />
 								</div>
 								<div class="form-group">
+
 									<input type="password" class="form-control" placeholder="********" id="password" th:field="*{password}"/>
 								</div>
-								<div>
-									<td th:text="${error}">1</td>
+								<div style="color:red;">
+									<td  th:text="${error}">1</td>
 
 								</div>
 								<div class="offset-sm-4 col-sm-2">
