agrego scroll-box a mascotas en adopcion asi tiene le header el mismo tamanio

--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -40,7 +40,7 @@
 				<!--Lista de Mascotas por Adoptar-->
 				<div class="col-sm-5">
 
-					<div class="card-masc" id="mascotaDiv">
+					<div class="card-puntas scroll-box" fon id="mascotaDiv">
                         <h2 class="card-header " >Todavía buscamos un hogar</h2>
 
 					</div>
