fix eventos proximos

--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -96,23 +96,19 @@ function cargarProximosEventos() {
 				var eventoElem= $('<div class="card-event bg-light mb-3" style="max-width: 50rem;"> '
 						+'<div class="card-header">'
 						//+'<img class="iconCalendar" th:src="@{/static/img/calendar.png}" alt="calendar">'
-						+'<spam class="titEvent">'+evento.lugar+'</spam>'
+						+'<spam class="titEvent">'+evento.lugar+' - '+evento.barrio+'</spam>'
 						+'</div>'
 						+'<div class="card-body">'
 						+'<div class="row">'
-						+'<div class="col-md-3 titDato">Dirección:</div>'
+						+'<div class="col-md-3 titDato">Lugar:</div>'
 						+'<spam class="datoText">'+evento.direccion+'</spam>'
 						+'</div>'
 						+'<div class="row">'
-						+'<div class="col-md-3 titDato">Barrio:</div>'
-						+'<spam class="datoText">'+evento.barrio+'</spam>'
-						+'</div>'
-						+'<div class="row">'
-						+'<div class="col-md-3 titDato">Día y Hora:</div>'
+						+'<div class="col-md-3 titDato">Día:</div>'
 						+'<spam class="datoText">'+evento.dias+' '+evento.horarios+' </spam>'
 						+'</div>'
 						+'<div class="row">'
-						+'<div class="col-md-5 titDato">Descripción:</div>'
+						+'<div class="col-md-5 titDato">Actividad:</div>'
 						+'</div>'
 						+'<div class="row">'
 						+'<div class="col-md-12">'
